--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-modal": "^3.6.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^5.0.0",
