--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-redux-starter",
+  "name": "pokepedia",
   "version": "1.0.0",
-  "description": "A basic template that consists of the essential elements that are required to start building a React application using Redux",
+  "description": "Pokepedia (Pokemon Encyclopedia) is a website that provide showcase about Pokemon.",
   "scripts": {
     "build": "webpack",
     "build:dev": "npm run build -- --env.env=dev",
